--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This file was created by IntelliJ IDEA 12.1.4 for binding GitHub repository
+Square Eyes
+
+This is being used as a place to learn various APIs  and follow tutorials for 2d and 3d Java game development. 
+From basic animation patterns with inbuilt libraries, to dedicated frameworks such as libgdx.
+
